--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     width: 100%;
 }
 
+h1,h2,h3{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
 body{
     background-color: #453652;
     color: #E2DAE9;
@@ -30,7 +34,6 @@ nav{
 }
 
 nav.nav-list{
-    padding: 5px;
     margin-bottom: 20px;
     text-align: center;
 }
@@ -39,6 +42,9 @@ ul{
     margin: 0;
     padding: 0;
     list-style-type: none;
+}
+p{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 li{
@@ -63,6 +69,7 @@ main article{
     padding: 20px;
 }
 
+
 .article-img{
     max-width: 45%;
     height: auto;
@@ -76,6 +83,23 @@ main article{
 	margin: 0 auto;        
     }
 
+h2, ul{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+footer{
+    background-color: #2136D1;
+    font-size: 18px;
+    color: #E2DAE9;
+    text-decoration: none;
+    text-align: center;
+}
+
+.form-group{
+    padding-bottom: 10px;
+
+}
     
 .card {     
     max-height: auto;
@@ -90,7 +114,7 @@ main article{
     padding: 10px;
     margin-left: auto;
     margin-right: auto;
-    font-size: 30px;
+    font-size: 25px;
     cursor: pointer;
     color: gray;
 }
@@ -101,8 +125,15 @@ main article{
 /* Desktop */
 @media screen and (min-width: 1024px) {
     
+    nav{
+        height: 50px;
+
+    }
+
     nav.nav-list{ /* Centerar navigeringsmenyn */
         text-align: center;
+        padding-top: 25px;
+
     }
     nav.nav-list ul li{
         display: inline; /* Visar menyn som inline */
@@ -122,11 +153,6 @@ main article{
     
     article{
         width: 812px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    h2, ul{
         margin-left: auto;
         margin-right: auto;
     }
